SUBDIRS = tk

bin_PROGRAMS = naev

AM_CFLAGS = $(NAEV_CFLAGS)
AM_CPPFLAGS = -DLOCALEDIR=\"$(localedir)\"
CLEANFILES =
naev_LDADD = $(NAEV_LIBS) $(LIBINTL)
naev_DEPENDENCIES = $(NAEV_DEPENDENCIES)


if HAVE_SHADERS_C_GEN
# Compile shaders_c_gen for the build environment.
shaders.gen.c shaders.gen.h: shaders_c_gen$(BUILD_EXEEXT)
	./$<
shaders_c_gen$(BUILD_EXEEXT): shaders_c_gen.c
	$(CC_FOR_BUILD) $(CFLAGS_FOR_BUILD) $< -o $@
CLEANFILES += shaders.gen.c shaders.gen.h shaders_c_gen$(BUILD_EXEEXT)
BUILT_SOURCES = shaders.gen.c shaders.gen.h
endif


naev_SOURCES = \
	ai.c \
	array.c \
	attributes.h \
	background.c \
	base64.c \
	board.c \
	camera.c \
	claim.c \
	collision.c \
	colour.c \
	comm.c \
	commodity.c \
	cond.c \
	conf.c \
	console.c \
	damagetype.c \
	debris.c \
	dev.c \
	dev_outfit.c \
	dev_planet.c \
	dev_ship.c \
	dev_system.c \
	dev_sysedit.c \
	dev_uniedit.c \
	dev_mapedit.c \
	dialogue.c \
	economy.c \
	env.c \
	equipment.c \
	escort.c \
	event.c \
	explosion.c \
	faction.c \
	fleet.c \
	font.c \
	glad.c \
	gui.c \
	gui_omsg.c \
	gui_osd.c \
	hook.c \
	info.c \
	input.c \
	intro.c \
	joystick.c \
	khrplatform.h \
	land.c \
	land_outfits.c \
	land_shipyard.c \
	land_trade.c \
	load.c \
	log.c \
	map.c \
	map_find.c \
	map_overlay.c \
	map_system.c \
	md5.c \
	menu.c \
	mission.c \
	music.c \
	music_openal.c \
	music_sdlmix.c \
	naev.c \
	ndata.c \
	nebula.c \
	news.c \
	nfile.c \
	nlua.c \
	nlua_bkg.c \
	nlua_camera.c \
	nlua_cli.c \
	nlua_col.c \
	nlua_commodity.c \
	nlua_diff.c \
	nlua_evt.c \
	nlua_faction.c \
	nlua_gfx.c \
	nlua_gui.c \
	nlua_hook.c \
	nlua_jump.c \
	nlua_misn.c \
	nlua_music.c \
	nlua_naev.c \
	nlua_news.c \
	nlua_outfit.c \
	nlua_pilot.c \
	nlua_planet.c \
	nlua_player.c \
	nlua_rnd.c \
	nlua_ship.c \
	nlua_shiplog.c \
	nlua_spfx.c \
	nlua_system.c \
	nlua_tex.c \
	nlua_time.c \
	nlua_tk.c \
	nlua_var.c \
	nlua_vec2.c \
	nmath.c \
	nopenal.c \
	npng.c \
	npc.c \
	nstring.c \
	ntime.c \
	nxml.c \
	nxml_lua.c \
	opengl.c \
	opengl_matrix.c \
	opengl_render.c \
	opengl_shader.c \
	opengl_tex.c \
	opengl_vbo.c \
	options.c \
	outfit.c \
	pause.c \
	perlin.c \
	physics.c \
	pilot.c \
	pilot_cargo.c \
	pilot_ew.c \
	pilot_heat.c \
	pilot_hook.c \
	pilot_outfit.c \
	pilot_weapon.c \
	player.c \
	player_autonav.c \
	player_gui.c \
	queue.c \
	rng.c \
	save.c \
	semver.c \
	shaders.gen.c \
	ship.c \
	shiplog.c \
	shipstats.c \
	slots.c \
	sound.c \
	sound_openal.c \
	sound_sdlmix.c \
	space.c \
	spfx.c \
	start.c \
	tech.c \
	threadpool.c \
	toolkit.c \
	unidiff.c \
	utf8.c \
	weapon.c \
	ai.h \
	array.h \
	background.h \
	base64.h \
	board.h \
	camera.h \
	claim.h \
	collision.h \
	colour.h \
	comm.h \
	commodity.h \
	cond.h \
	conf.h \
	config.h \
	console.h \
	damagetype.h \
	debris.h \
	dev.h \
	dev_outfit.h \
	dev_planet.h \
	dev_ship.h \
	dev_system.h \
	dev_sysedit.h \
	dev_uniedit.h \
	dev_mapedit.h \
	dialogue.h \
	economy.h \
	env.h \
	equipment.h \
	escort.h \
	event.h \
	explosion.h \
	faction.h \
	fleet.h \
	font.h \
	gettext.h \
	glad.h \
	gui.h \
	gui_omsg.h \
	gui_osd.h \
	hook.h \
	info.h \
	input.h \
	intro.h \
	joystick.h \
	land.h \
	land_outfits.h \
	land_shipyard.h \
	land_takeoff.h \
	land_trade.h \
	load.h \
	log.h \
	map.h \
	mapData.h \
	map_find.h \
	map_overlay.h \
	map_system.h \
	md5.h \
	menu.h \
	mission.h \
	music.h \
	music_openal.h \
	music_sdlmix.h \
	naev.h \
	ncompat.h \
	ndata.h \
	nebula.h \
	news.h \
	nfile.h \
	nlua.h \
	nlua_bkg.h \
	nlua_camera.h \
	nlua_cli.h \
	nlua_col.h \
	nlua_commodity.h \
	nlua_diff.h \
	nlua_evt.h \
	nlua_faction.h \
	nlua_gfx.h \
	nlua_gui.h \
	nlua_hook.h \
	nlua_jump.h \
	nlua_misn.h \
	nlua_music.h \
	nlua_naev.h \
	nlua_news.h \
	nlua_outfit.h \
	nlua_pilot.h \
	nlua_planet.h \
	nlua_player.h \
	nlua_rnd.h \
	nlua_ship.h \
	nlua_shiplog.h \
	nlua_spfx.h \
	nlua_system.h \
	nlua_tex.h \
	nlua_time.h \
	nlua_tk.h \
	nlua_var.h \
	nlua_vec2.h \
	nluadef.h \
	nmath.h \
	nopenal.h \
	npng.h \
	npc.h \
	nstd.h \
	nstring.h \
	ntime.h \
	nxml.h \
	nxml_lua.h \
	opengl.h \
	opengl_matrix.h \
	opengl_render.h \
	opengl_shader.h \
	opengl_tex.h \
	opengl_vbo.h \
	options.h \
	outfit.h \
	pause.h \
	perlin.h \
	physics.h \
	pilot.h \
	pilot_cargo.h \
	pilot_ew.h \
	pilot_flags.h \
	pilot_heat.h \
	pilot_hook.h \
	pilot_outfit.h \
	pilot_weapon.h \
	player.h \
	player_autonav.h \
	player_gui.h \
	queue.h \
	rng.h \
	save.h \
	semver.h \
	shaders.gen.h \
	ship.h \
	shiplog.h \
	shipstats.h \
	slots.h \
	sound.h \
	sound_openal.h \
	sound_priv.h \
	sound_sdlmix.h \
	space.h \
	spfx.h \
	start.h \
	tech.h \
	threadpool.h \
	toolkit.h \
	unidiff.h \
	utf8.h \
	weapon.h

if HAVE_WINDRES
nodist_naev_SOURCES = $(top_builddir)/extras/windows/resource.rc
CLEANFILES += $(top_builddir)/extras/windows/naev.exe.manifest $(top_builddir)/extras/windows/resource.rc
$(top_builddir)/extras/windows/naev.exe.manifest: $(top_srcdir)/extras/windows/naev.exe.manifest.in
	../config.status -q --file=$@:$<
$(top_builddir)/extras/windows/resource.rc: $(top_srcdir)/extras/windows/resource.rc.in $(top_builddir)/extras/windows/naev.exe.manifest
	../config.status -q --file=$@:$<
.rc.o:
	@WINDRES@ -I$(top_builddir)/extras/windows -I$(top_srcdir)/extras/logos $< -O coff $@
endif

if HAVE_MACOS
naev_SOURCES += glue_macos.m
endif
