####
# Source lists
####
source = files(
   'array.c',
   'background.c',
   'base64.c',
   'board.c',
   'camera.c',
   'claim.c',
   'collision.c',
   'colour.c',
   'comm.c',
   'commodity.c',
   'cond.c',
   'conf.c',
   'console.c',
   'damagetype.c',
   'debris.c',
   'dev.c',
   'dev_mapedit.c',
   'dev_outfit.c',
   'dev_planet.c',
   'dev_ship.c',
   'dev_sysedit.c',
   'dev_system.c',
   'dev_uniedit.c',
   'distance_field.c',
   'dialogue.c',
   'economy.c',
   'edtaa3func.c',
   'env.c',
   'equipment.c',
   'escort.c',
   'event.c',
   'explosion.c',
   'faction.c',
   'fleet.c',
   'font.c',
   'glad.c',
   'gui.c',
   'gui_omsg.c',
   'gui_osd.c',
   'hook.c',
   'info.c',
   'input.c',
   'intro.c',
   'joystick.c',
   'land.c',
   'land_outfits.c',
   'land_shipyard.c',
   'land_trade.c',
   'load.c',
   'log.c',
   'lutf8lib.c',
   'map.c',
   'map_find.c',
   'map_overlay.c',
   'map_system.c',
   'md5.c',
   'menu.c',
   'mission.c',
   'music.c',
   'music_openal.c',
   'naev.c',
   'ndata.c',
   'nebula.c',
   'news.c',
   'nfile.c',
   'nlua.c',
   'nmath.c',
   'nopenal.c',
   'npc.c',
   'npng.c',
   'nstring.c',
   'ntime.c',
   'nxml.c',
   'nxml_lua.c',
   'opengl.c',
   'opengl_matrix.c',
   'opengl_render.c',
   'opengl_shader.c',
   'opengl_tex.c',
   'opengl_vbo.c',
   'options.c',
   'outfit.c',
   'pause.c',
   'perlin.c',
   'physics.c',
   'pilot.c',
   'pilot_cargo.c',
   'pilot_ew.c',
   'pilot_heat.c',
   'pilot_hook.c',
   'pilot_outfit.c',
   'pilot_weapon.c',
   'player.c',
   'player_autonav.c',
   'player_gui.c',
   'queue.c',
   'rng.c',
   'save.c',
   'semver.c',
   'ship.c',
   'shiplog.c',
   'shipstats.c',
   'slots.c',
   'sound.c',
   'sound_openal.c',
   'space.c',
   'spfx.c',
   'start.c',
   'tech.c',
   'threadpool.c',
   'toolkit.c',
   'unidiff.c',
   'utf8.c',
   'weapon.c',
   'tk/widget/input.c',
   'tk/widget/image.c',
   'tk/widget/cust.c',
   'tk/widget/rect.c',
   'tk/widget/tabwin.c',
   'tk/widget/fader.c',
   'tk/widget/checkbox.c',
   'tk/widget/imagearray.c',
   'tk/widget/button.c',
   'tk/widget/text.c',
   'tk/widget/list.c',
)

lua_source = files(
   'ai.c',
   'nlua_audio.c',
   'nlua_bkg.c',
   'nlua_camera.c',
   'nlua_cli.c',
   'nlua_col.c',
   'nlua_commodity.c',
   'nlua_data.c',
   'nlua_diff.c',
   'nlua_evt.c',
   'nlua_faction.c',
   'nlua_file.c',
   'nlua_font.c',
   'nlua_gfx.c',
   'nlua_gui.c',
   'nlua_hook.c',
   'nlua_jump.c',
   'nlua_misn.c',
   'nlua_music.c',
   'nlua_naev.c',
   'nlua_news.c',
   'nlua_outfit.c',
   'nlua_pilot.c',
   'nlua_planet.c',
   'nlua_player.c',
   'nlua_rnd.c',
   'nlua_ship.c',
   'nlua_shiplog.c',
   'nlua_system.c',
   'nlua_tex.c',
   'nlua_time.c',
   'nlua_tk.c',
   'nlua_transform.c',
   'nlua_var.c',
   'nlua_vec2.c'
)

mac_source = files('glue_macos.m')

naev_source = [
   source,
   lua_source
]

# Headers aren't needed for running the builds,
# as they can all be found in the defined include derectories.
# These are only used to let Meson know that Doxygen needs to be
# re-run when these files change.
headers = files(
   'ai.h',
   'array.h',
   'background.h',
   'base64.h',
   'board.h',
   'camera.h',
   'claim.h',
   'collision.h',
   'colour.h',
   'comm.h',
   'commodity.h',
   'cond.h',
   'conf.h',
   'console.h',
   'damagetype.h',
   'debris.h',
   'dev.h',
   'dev_mapedit.h',
   'dev_outfit.h',
   'dev_planet.h',
   'dev_ship.h',
   'dev_sysedit.h',
   'dev_system.h',
   'dev_uniedit.h',
   'distance_field.h',
   'dialogue.h',
   'economy.h',
   'edtaa3func.h',
   'equipment.h',
   'escort.h',
   'env.h',
   'event.h',
   'explosion.h',
   'faction.h',
   'fleet.h',
   'font.h',
   'gettext.h',
   'glad.h',
   'glue_macos.h',
   'gui.h',
   'gui_omsg.h',
   'gui_osd.h',
   'hook.h',
   'info.h',
   'input.h',
   'intro.h',
   'joystick.h',
   'khrplatform.h',
   'land.h',
   'land_outfits.h',
   'land_shipyard.h',
   'land_takeoff.h',
   'land_trade.h',
   'load.h',
   'log.h',
   'lutf8lib.h',
   'map.h',
   'mapData.h',
   'map_find.h',
   'map_overlay.h',
   'map_system.h',
   'md5.h',
   'menu.h',
   'mission.h',
   'music.h',
   'music_openal.h',
   'naev.h',
   'ncompat.h',
   'ndata.h',
   'nebula.h',
   'news.h',
   'nfile.h',
   'nlua.h',
   'nlua_audio.h',
   'nlua_bkg.h',
   'nlua_camera.h',
   'nlua_cli.h',
   'nlua_col.h',
   'nlua_commodity.h',
   'nlua_data.h',
   'nlua_diff.h',
   'nlua_evt.h',
   'nlua_faction.h',
   'nlua_file.h',
   'nlua_font.h',
   'nlua_gfx.h',
   'nlua_gui.h',
   'nlua_hook.h',
   'nlua_jump.h',
   'nlua_misn.h',
   'nlua_music.h',
   'nlua_naev.h',
   'nlua_news.h',
   'nlua_outfit.h',
   'nlua_pilot.h',
   'nlua_planet.h',
   'nlua_player.h',
   'nlua_rnd.h',
   'nlua_ship.h',
   'nlua_shiplog.h',
   'nlua_system.h',
   'nlua_tex.h',
   'nlua_time.h',
   'nlua_tk.h',
   'nlua_transform.h',
   'nlua_var.h',
   'nlua_vec2.h',
   'nluadef.h',
   'nmath.h',
   'nopenal.h',
   'npc.h',
   'npng.h',
   'nstd.h',
   'nstring.h',
   'ntime.h',
   'nxml.h',
   'nxml_lua.h',
   'opengl.h',
   'opengl_matrix.h',
   'opengl_render.h',
   'opengl_shader.h',
   'opengl_tex.h',
   'opengl_vbo.h',
   'options.h',
   'outfit.h',
   'pause.h',
   'perlin.h',
   'physics.h',
   'pilot.h',
   'pilot_cargo.h',
   'pilot_ew.h',
   'pilot_heat.h',
   'pilot_hook.h',
   'pilot_outfit.h',
   'pilot_weapon.h',
   'player.h',
   'player_autonav.h',
   'player_gui.h',
   'queue.h',
   'rng.h',
   'save.h',
   'ship.h',
   'shiplog.h',
   'shipstats.h',
   'slots.h',
   'sound.h',
   'sound_openal.h',
   'space.h',
   'spfx.h',
   'start.h',
   'tech.h',
   'threadpool.h',
   'tk/toolkit_priv.h',
   'tk/widget.h',
   'tk/widget/button.h',
   'tk/widget/checkbox.h',
   'tk/widget/cust.h',
   'tk/widget/fader.h',
   'tk/widget/image.h',
   'tk/widget/imagearray.h',
   'tk/widget/input.h',
   'tk/widget/list.h',
   'tk/widget/rect.h',
   'tk/widget/tabwin.h',
   'tk/widget/text.h',
   'toolkit.h',
   'unidata.h',
   'unidiff.h',
   'utf8.h',
   'weapon.h'
)
